# OrbitSimulation

./: .gitignore  BodyProblem.sln  BodyProblem.vcxproj  BodyProblem.vcxproj.filters  CMakeLists.txt  LICENSE  README.md
include/: Body.h  Shader.h  Simulation.h
include/glad/: glad.h
lib/: glfw3.lib
shaders/: default.frag  default.vert
src/: Body.cpp  Main.cpp  Shader.cpp  Simulation.cpp  glad.c
